2005-03-01	Istvan Varga	<istvan@csounds.com>
	* Opcodes/gab/gab.c:
	  fixes in Maldonado opcodes
	* Top/dl_opcodes.c:
	  fixed -v crash
	* Engine/memalloc.c:
	  print function name correctly

2005-02-28	Istvan Varga	<istvan@csounds.com>
	* cleanup.sh:
	  new script to remove files generated during compilation
	* OOps/fout.c:
	* Opcodes/fluidOpcodes/fluidOpcodes.cpp:
	* Opcodes/OSC-Kit/OSC-priority-queue.c:
	* Opcodes/OSC-Kit/OSC-timetag.c:
	* util2/mixer/xtrct.c:
	  fixed compiler warnings
	* American.xmg:
	* English.xmg:
	* csound.pdf:
	* csound.xmg:
	  removed files from repository

2005-02-27	Steven Yi <stevenyi@csounds.com>
	* frontends/CsoundVST/CppSound.hpp: changed #include of cs.h to 
	csoundCore.h

2005-02-27  Michael Gogins <gogins@pipeline.com>
	* Changed fluid* opcodes: removed Gogins version, merged
	option to print presets to fluidLoad and added fluidControl opcode
	from Gogins version, added new fluidAllOut opcode to collect
	all audio from all Fluidsynth engines in a performance.
	* Removed Opcodes/fluid directory (Opcodes/fluidOpcodes now
	implements all features formerly found there).
	* Updated H/OpcodeBase.hpp to work properly with new SUBR signature.
	* Updated examples/Koch.py to use fluidOpcodes.

2005-02-27	Istvan Varga	<istvan@csounds.com>
	* Engine/entry2.c:
	* H/midiops.h:
	* OOps/midiops.c:
	  added optional i-time parameter (defaults to 0) to pgmassign,
	  selects MIDI channel (zero means all channels)
	* Engine/musmon.c:
	  fixed terminating on end of MIDI file (-T flag)
	* H/csoundCore.h:
	  moved pgm2ins[] from MGLOBAL to MCHNBLK to allow setting per channel
	  other changes in MCHNBLK and MGLOBAL
	* H/midiops.h:
	* InOut/midirecv.c:
	  do not use MIDI controllers (<128) for storing Csound internal data
	  Roland NRPNS (VIB_RATE etc.) moved to controllers 128-135
	  removed MOD_VOLUME
	  removed BENDSENS (replaced with MYFLT MCHNBLK.pbensens)
	  removed DATENABL (replaced with int MCHNBLK.datenabl)
	* InOut/midifile.c: