@@ -271,39 +271,44 @@ OENTRY opcodlst_2[] = {
 { "FLsetVal_i",S(FL_SET_WIDGET_VALUE_I), 1, "", "ii", fl_setWidgetValuei, NULL, NULL },
 { "FLsetVali",S(FL_SET_WIDGET_VALUE_I), 1, "", "ii", fl_setWidgetValuei, NULL, NULL },
 { "FLsetVal",S(FL_SET_WIDGET_VALUE), 3, "", "kki", fl_setWidgetValue_set, fl_setWidgetValue },
-{ "FLsetColor",S(FL_SET_COLOR), 1, "",  "iiii",         fl_setColor1, NULL, NULL},
-{ "FLsetColor2",S(FL_SET_COLOR), 1, "", "iiii",         fl_setColor2, NULL, NULL},
-{ "FLsetTextSize",S(FL_SET_TEXTSIZE), 1, "", "ii",   fl_setTextSize, NULL, NULL },
+{ "FLsetColor",S(FL_SET_COLOR), 1, "",  "iiii",     fl_setColor1, NULL, NULL},
+{ "FLsetColor2",S(FL_SET_COLOR), 1, "", "iiii",     fl_setColor2, NULL, NULL},
+{ "FLsetTextSize",S(FL_SET_TEXTSIZE), 1, "", "ii",  fl_setTextSize, NULL, NULL },
 { "FLsetTextColor",S(FL_SET_COLOR), 1, "", "iiii",  fl_setTextColor, NULL, NULL },
-{ "FLsetFont",S(FL_SET_FONT), 1, "",    "ii",           fl_setFont, NULL, NULL  },
-{ "FLsetTextType",S(FL_SET_FONT), 1, "", "ii",       fl_setTextType, NULL, NULL },
-{ "FLsetText",S(FL_SET_TEXT), 1, "",    "Si",           fl_setText, NULL, NULL  },
-{ "FLsetSize",S(FL_SET_SIZE), 1, "",    "iii",          fl_setSize, NULL, NULL  },
-{ "FLsetPosition",S(FL_SET_POSITION), 1, "", "iii",  fl_setPosition, NULL, NULL },
-{ "FLhide",S(FL_WIDHIDE), 1,    "",     "i",            fl_hide, NULL, NULL     },
-{ "FLshow",S(FL_WIDSHOW), 1,    "",     "i",            fl_show, NULL, NULL     },
-{ "FLsetBox",S(FL_SETBOX), 1,   "",     "ii",           fl_setBox, NULL, NULL   },
-{ "FLsetAlign",S(FL_TALIGN), 1, "",     "ii",           fl_align, NULL, NULL    },
-{ "FLbox",S(FL_BOX),      1,    "i",    "Siiiiiii",     fl_box, NULL, NULL      },
-{ "FLvalue",S(FLVALUE),   1,    "i",    "Sjjjj",        fl_value, NULL, NULL    },
-{ "FLpanel",S(FLPANEL),   1,    "",     "Sjjooo",       StartPanel, NULL, NULL  },
-{ "FLpanelEnd",S(FLPANELEND), 1, "",    "",             EndPanel, NULL, NULL    },
-{ "FLscroll",S(FLSCROLL), 1,    "",     "iiii",         StartScroll, NULL, NULL },
-{ "FLscrollEnd",S(FLSCROLLEND), 1, "",  "",             EndScroll, NULL, NULL   },
-{ "FLpack",S(FLPACK),     1,    "",     "iiii",         StartPack, NULL, NULL   },
-{ "FLpackEnd",S(FLPACKEND), 1, "",      "",             EndPack, NULL, NULL     },
-{ "FLtabs",S(FLTABS),     1,    "",     "iiii",         StartTabs, NULL, NULL   },
-{ "FLtabsEnd",S(FLTABSEND), 1, "",      "",             EndTabs, NULL, NULL     },
-{ "FLgroup",S(FLGROUP),   1,    "",     "Siiiij",       StartGroup, NULL, NULL  },
-{ "FLgroupEnd",S(FLGROUPEND), 1, "",    "",             EndGroup, NULL, NULL    },
-{ "FLsetsnap",S(FLSETSNAP), 1,  "ii",   "io",           set_snap, NULL, NULL    },
-{ "FLgetsnap",S(FLGETSNAP), 1,  "i",    "i",            get_snap, NULL, NULL    },
-{ "FLsavesnap",S(FLSAVESNAPS), 1, "",   "S",            save_snap, NULL, NULL   },
-{ "FLloadsnap",S(FLLOADSNAPS), 1, "",   "S",            load_snap, NULL, NULL   },
-{ "FLrun",S(FLRUN),       1,    "",     "",             FL_run, NULL, NULL      },
-{ "FLupdate",S(FLRUN),    1,    "",     "",             fl_update, NULL, NULL   },
-{ "FLprintk",S(FLPRINTK), 3,    "",     "iki",      FLprintkset, FLprintk, NULL },
-{ "FLprintk2",S(FLPRINTK2), 3,  "",     "ki",     FLprintk2set, FLprintk2, NULL },
+{ "FLsetFont",S(FL_SET_FONT), 1, "",    "ii",   fl_setFont, NULL, NULL      },
+{ "FLsetTextType",S(FL_SET_FONT), 1, "", "ii",  fl_setTextType, NULL, NULL  },
+{ "FLsetText",S(FL_SET_TEXT), 1, "",    "Si",       fl_setText, NULL, NULL  },
+{ "FLsetSize",S(FL_SET_SIZE), 1, "",    "iii",      fl_setSize, NULL, NULL  },
+{ "FLsetPosition",S(FL_SET_POSITION), 1, "", "iii", fl_setPosition, NULL, NULL },
+{ "FLhide",S(FL_WIDHIDE), 1,    "",     "i",        fl_hide, NULL, NULL     },
+{ "FLshow",S(FL_WIDSHOW), 1,    "",     "i",        fl_show, NULL, NULL     },
+{ "FLsetBox",S(FL_SETBOX), 1,   "",     "ii",       fl_setBox, NULL, NULL   },
+{ "FLsetAlign",S(FL_TALIGN), 1, "",     "ii",       fl_align, NULL, NULL    },
+{ "FLbox",S(FL_BOX),      1,    "i",    "Siiiiiii", fl_box, NULL, NULL      },
+{ "FLvalue",S(FLVALUE),   1,    "i",    "Sjjjj",    fl_value, NULL, NULL    },
+{ "FLpanel",S(FLPANEL),   1,    "",     "Sjjooo",   StartPanel, NULL, NULL  },
+{ "FLpanelEnd",S(FLPANELEND), 1, "",    "",         EndPanel, NULL, NULL    },
+{ "FLpanel_end",S(FLPANELEND), 1, "",    "",        EndPanel, NULL, NULL    },
+{ "FLscroll",S(FLSCROLL), 1,    "",     "iiii",     StartScroll, NULL, NULL },
+{ "FLscrollEnd",S(FLSCROLLEND), 1, "",  "",         EndScroll, NULL, NULL   },
+{ "FLscroll_end",S(FLSCROLLEND), 1, "",  "",        EndScroll, NULL, NULL   },
+{ "FLpack",S(FLPACK),     1,    "",     "iiii",     StartPack, NULL, NULL   },
+{ "FLpackEnd",S(FLPACKEND), 1, "",      "",         EndPack, NULL, NULL     },
+{ "FLpack_end",S(FLPACKEND), 1, "",      "",        EndPack, NULL, NULL     },
+{ "FLtabs",S(FLTABS),     1,    "",     "iiii",     StartTabs, NULL, NULL   },
+{ "FLtabsEnd",S(FLTABSEND), 1, "",      "",         EndTabs, NULL, NULL     },
+{ "FLtabs_end",S(FLTABSEND), 1, "",      "",        EndTabs, NULL, NULL     },
+{ "FLgroup",S(FLGROUP),   1,    "",     "Siiiij",   StartGroup, NULL, NULL  },
+{ "FLgroupEnd",S(FLGROUPEND), 1, "",    "",         EndGroup, NULL, NULL    },
+{ "FLgroup_end",S(FLGROUPEND), 1, "",    "",        EndGroup, NULL, NULL    },
+{ "FLsetsnap",S(FLSETSNAP), 1,  "ii",   "io",       set_snap, NULL, NULL    },
+{ "FLgetsnap",S(FLGETSNAP), 1,  "i",    "i",        get_snap, NULL, NULL    },
+{ "FLsavesnap",S(FLSAVESNAPS), 1, "",   "S",        save_snap, NULL, NULL   },
+{ "FLloadsnap",S(FLLOADSNAPS), 1, "",   "S",        load_snap, NULL, NULL   },
+{ "FLrun",S(FLRUN),       1,    "",     "",         FL_run, NULL, NULL      },
+{ "FLupdate",S(FLRUN),    1,    "",     "",         fl_update, NULL, NULL   },
+{ "FLprintk",S(FLPRINTK), 3,    "",     "iki",  FLprintkset, FLprintk, NULL },
+{ "FLprintk2",S(FLPRINTK2), 3,  "",     "ki",   FLprintk2set, FLprintk2, NULL },
 #endif
 { "=.f",      S(FASSIGN), 2,    "f",   "f",      NULL, fassign, NULL            },
 { "pvsanal",  S(PVSANAL), 5,    "f",   "aiiiioo",  pvsanalset, NULL, pvsanal    },
